--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,11 +6,16 @@ on:
       branches:
       - bnkmon
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: wait for 5 minutes
+        run: sleep 300
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
